fix find id trx
